TextBox and ClipFrame

--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -171,7 +171,9 @@
     <ClInclude Include="figure\image.h" />
     <ClInclude Include="figure\layer.h" />
     <ClInclude Include="figure\shape.h" />
+    <ClInclude Include="figure\text_block.h" />
     <ClInclude Include="figure\tiled_layer.h" />
+    <ClInclude Include="frame\ClipFrame.h" />
     <ClInclude Include="frame\DesktopFrame.h" />
     <ClInclude Include="frame\LayerFrame.h" />
     <ClInclude Include="frame\MultiViewFrame.h" />
@@ -202,6 +204,7 @@
     <ClInclude Include="style\desktop_frame_style.h" />
     <ClInclude Include="style\frame_style.h" />
     <ClInclude Include="style\style_helper.h" />
+    <ClInclude Include="style\text_block_style.h" />
     <ClInclude Include="style\value_tag.h" />
     <ClInclude Include="style\style.h" />
     <ClInclude Include="system\clipboard.h" />
@@ -229,6 +232,7 @@
     <ClCompile Include="figure\image.cpp" />
     <ClCompile Include="figure\layer.cpp" />
     <ClCompile Include="figure\shape.cpp" />
+    <ClCompile Include="figure\text_block.cpp" />
     <ClCompile Include="frame\DesktopFrame.cpp" />
     <ClCompile Include="frame\LayerFrame.cpp" />
     <ClCompile Include="geometry\region.cpp" />
