--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -219,6 +219,15 @@
     <ClInclude Include="message\timer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="figure\text_block.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="style\text_block_style.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="frame\ClipFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="figure\desktop_layer.cpp">
@@ -279,6 +288,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="message\timer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="figure\text_block.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
