--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DesktopFrameTest.h" />
+    <ClInclude Include="TextBoxTest.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp" />
