--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="TextBoxTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EditBoxTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
