--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -226,6 +226,7 @@
     <ClInclude Include="system\win32_aero_snap.h" />
     <ClInclude Include="system\win32_api.h" />
     <ClInclude Include="system\win32_ime.h" />
+    <ClInclude Include="widget\ScrollBox.h" />
     <ClInclude Include="window\Global.h" />
     <ClInclude Include="window\desktop.h" />
     <ClInclude Include="window\wnd_traits.h" />
