--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClInclude Include="EditBoxTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ScrollBoxTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SplitLayoutTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
