--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -240,6 +240,9 @@
     <ClInclude Include="style\desktop_frame_style.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="widget\ScrollBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="figure\desktop_layer.cpp">
