--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -243,6 +243,9 @@
     <ClInclude Include="widget\ScrollBox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="common\array_vector_selector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="figure\desktop_layer.cpp">
