FlowLayout, layout draw child with clip

--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="BarLayoutTest.h" />
     <ClInclude Include="DesktopFrameTest.h" />
     <ClInclude Include="EditBoxTest.h" />
+    <ClInclude Include="FlowLayoutTest.h" />
     <ClInclude Include="ImageBoxTest.h" />
     <ClInclude Include="ListLayoutTest.h" />
     <ClInclude Include="ScrollBoxTest.h" />
