--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="BarLayoutTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FlowLayoutTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
