--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -160,7 +160,6 @@
     <ClInclude Include="common\uncopyable.h" />
     <ClInclude Include="common\unicode_helper.h" />
     <ClInclude Include="control\Button.h" />
-    <ClInclude Include="control\CheckBox.h" />
     <ClInclude Include="control\EditBox.h" />
     <ClInclude Include="control\ImageBox.h" />
     <ClInclude Include="control\Placeholder.h" />
@@ -174,7 +173,6 @@
     <ClInclude Include="figure\layer.h" />
     <ClInclude Include="figure\shape.h" />
     <ClInclude Include="figure\text_block.h" />
-    <ClInclude Include="figure\tiled_layer.h" />
     <ClInclude Include="frame\BorderFrame.h" />
     <ClInclude Include="frame\CenterFrame.h" />
     <ClInclude Include="frame\ClipFrame.h" />
@@ -183,10 +181,7 @@
     <ClInclude Include="frame\LayerFrame.h" />
     <ClInclude Include="frame\MaxFrame.h" />
     <ClInclude Include="frame\PaddingFrame.h" />
-    <ClInclude Include="frame\MultiViewFrame.h" />
-    <ClInclude Include="frame\OverlapFrame.h" />
     <ClInclude Include="frame\ScrollFrame.h" />
-    <ClInclude Include="frame\TiledLayerFrame.h" />
     <ClInclude Include="frame\WndFrame.h" />
     <ClInclude Include="geometry\clamp.h" />
     <ClInclude Include="geometry\geometry.h" />
@@ -201,7 +196,6 @@
     <ClInclude Include="layout\BarLayout.h" />
     <ClInclude Include="layout\FlowLayout.h" />
     <ClInclude Include="layout\ListLayout.h" />
-    <ClInclude Include="layout\OverlapLayout.h" />
     <ClInclude Include="layout\SplitLayout.h" />
     <ClInclude Include="message\key_msg.h" />
     <ClInclude Include="message\message.h" />
@@ -235,6 +229,8 @@
     <ClInclude Include="window\desktop.h" />
     <ClInclude Include="window\wnd_traits.h" />
     <ClInclude Include="window\WndObject.h" />
+    <ClInclude Include="wrapper\Background.h" />
+    <ClInclude Include="wrapper\wrapper.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="common\unicode_helper.cpp" />
