--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -207,13 +207,7 @@
     <ClInclude Include="common\unicode_helper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="frame\PaddingFrame.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="control\Scrollbar.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="frame\BorderFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="widget\ScrollBox.h">
@@ -241,6 +235,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="wrapper\wrapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="wrapper\Border.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="wrapper\Padding.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="geometry\helper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="wrapper\Cursor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
