--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="FlowLayoutTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="OverlapLayoutTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
