--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -252,8 +252,11 @@
     <ClCompile Include="frame\DesktopFrame.cpp" />
     <ClCompile Include="geometry\region.cpp" />
     <ClCompile Include="figure\desktop_layer.cpp" />
+    <ClCompile Include="layout\BarLayout.cpp" />
     <ClCompile Include="layout\FlowLayout.cpp" />
+    <ClCompile Include="layout\ListLayout.cpp" />
     <ClCompile Include="layout\OverlapLayout.cpp" />
+    <ClCompile Include="layout\SplitLayout.cpp" />
     <ClCompile Include="message\timer.cpp" />
     <ClCompile Include="system\clipboard.cpp" />
     <ClCompile Include="system\cursor.cpp" />
