move Scale to a separate header file; calculate region with more precision

--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -261,6 +261,9 @@
     <ClInclude Include="layout\OverlapLayout.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="geometry\scale.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="figure\desktop_layer.cpp">
