--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="figure\layer.h" />
     <ClInclude Include="figure\shape.h" />
     <ClInclude Include="figure\text_block.h" />
+    <ClInclude Include="frame\InnerBorderFrame.h" />
     <ClInclude Include="frame\OverlapFrame.h" />
     <ClInclude Include="geometry\scale.h" />
     <ClInclude Include="geometry\transform.h" />
