--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -267,6 +267,9 @@
     <ClInclude Include="style\border_style.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="frame\InnerBorderFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="figure\desktop_layer.cpp">
