--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -270,6 +270,9 @@
     <ClInclude Include="message\timeout.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="layout\ListLayoutAuto.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="figure\desktop_layer.cpp">
@@ -357,6 +360,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="frame\LayerFrame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="layout\ListLayoutAuto.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
