--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -225,7 +225,7 @@
     <ClInclude Include="frame\FixedFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="frame\MaxFrame.h">
+    <ClInclude Include="frame\MinMaxFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="widget\TitleBarFrame.h">
