support coroutine task for timeout

--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -273,6 +273,12 @@
     <ClInclude Include="layout\ListLayoutAuto.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="common\coroutine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="common\function_traits.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="figure\desktop_layer.cpp">
