--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -156,6 +156,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="common\core.h" />
+    <ClInclude Include="common\coroutine.h" />
+    <ClInclude Include="common\function_traits.h" />
     <ClInclude Include="common\reversion_wrapper.h" />
     <ClInclude Include="common\uncopyable.h" />
     <ClInclude Include="common\unicode_helper.h" />
