--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="figure\text_block.h" />
     <ClInclude Include="frame\InnerBorderFrame.h" />
     <ClInclude Include="geometry\scale.h" />
+    <ClInclude Include="geometry\text_range.h" />
     <ClInclude Include="geometry\transform.h" />
     <ClInclude Include="frame\CenterFrame.h" />
     <ClInclude Include="frame\ClipFrame.h" />
