--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -205,6 +205,7 @@
     <ClInclude Include="layout\ListLayoutAuto.h" />
     <ClInclude Include="layout\OverlapLayout.h" />
     <ClInclude Include="layout\SplitLayout.h" />
+    <ClInclude Include="layout\TableLayout.h" />
     <ClInclude Include="message\key_msg.h" />
     <ClInclude Include="message\message.h" />
     <ClInclude Include="message\mouse_msg.h" />
