--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -285,6 +285,9 @@
     <ClInclude Include="layout\DivideLayout.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="layout\TableLayout.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="figure\desktop_layer.cpp">
